[gd_scene load_steps=6 format=3 uid="uid://bc8yj1ak2pgnc"]

[ext_resource type="Texture2D" uid="uid://8g8mb0g0o1gs" path="res://icons/pending.png" id="1_dv30q"]
[ext_resource type="Script" uid="uid://bpj5hhoh764oy" path="res://mp_indicator.gd" id="1_qie12"]
[ext_resource type="Texture2D" uid="uid://bhcejqi1utxuu" path="res://ui/sprites/loader.png" id="3_6amwy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thk0q"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_ea4jv"]
font_color = Color(0, 0, 0, 1)

[node name="MPIndicator" type="PanelContainer"]
z_index = 5
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_thk0q")
script = ExtResource("1_qie12")

[node name="StatusContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="StatusIcon" type="TextureRect" parent="StatusContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
texture = ExtResource("1_dv30q")
expand_mode = 1
stretch_mode = 5

[node name="StatusLabel" type="Label" parent="StatusContainer"]
layout_mode = 2
text = "Connecting"
label_settings = SubResource("LabelSettings_ea4jv")

[node name="RefreshButton" type="TextureButton" parent="StatusContainer"]
visible = false
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
texture_normal = ExtResource("3_6amwy")
ignore_texture_size = true
stretch_mode = 5
